src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BST_ACCOUNT_ADDRESS__c</fullName>
        <description>Address ( Composed of Street, Number, City, Zip Code, Country)</description>
        <formula>BillingStreet + &apos;, &apos; +   BillingState  + &apos;, &apos; +  BillingPostalCode + &apos;, &apos; +  TEXT(BST_COUNTRY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Account_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Account $ 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Account_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Account $ 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Account_Date_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Account Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Account_Date_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Account Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Account_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BST_Account_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Account P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Account_Text_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Account Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Account_Text_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Account Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Account_Text_3__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Account Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_BAXTER_ONLY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by Business Admin to mark the record as Baxter Only(these records would not be picked up by data stage for IMs integration/validation)</description>
        <label>Baxter Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_BAX_SALES_TEAM__c</fullName>
        <description>BST – Field to define the main Baxter team/Franchise for the user</description>
        <label>Baxter Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bax Company/Services</fullName>
                </value>
                <value>
                    <fullName>HC - Anesthesia/Critical Care</fullName>
                </value>
                <value>
                    <fullName>HC - BioSurgery</fullName>
                </value>
                <value>
                    <fullName>HC - Glob.Pharma Injectables</fullName>
                </value>
                <value>
                    <fullName>HC - Infusion Systems</fullName>
                </value>
                <value>
                    <fullName>HC - IV Therapies/SVP</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition Pediatrics</fullName>
                </value>
                <value>
                    <fullName>HC - Pharmacy Services</fullName>
                </value>
                <value>
                    <fullName>HC - Productivity Sys</fullName>
                    <isActive>false</isActive>
                    <label>HC - Productivity Sys</label>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                    <isActive>false</isActive>
                    <label>Market Access</label>
                </value>
                <value>
                    <fullName>MSL/Medical</fullName>
                    <isActive>false</isActive>
                    <label>MSL/Medical</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RE - Acute</fullName>
                </value>
                <value>
                    <fullName>RE - Hemo Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Peritoneal Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Water Treatment</fullName>
                </value>
                <value>
                    <fullName>Small Volume Parenterals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_BOOST_Account_ID__c</fullName>
        <displayFormat>A-{00000}</displayFormat>
        <label>BOOST Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_Bill_To_Account_Number__c</fullName>
        <formula>BST_Bill_To_Account__r.BST_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_Billing_Type__c</fullName>
        <description>Captures the Billing type of the account</description>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BST_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_COMP_BAX_ADVANTAGES__c</fullName>
        <description>Baxter Advantages Against Competition</description>
        <label>Baxter Advantages Against Competition</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BST_COMP_HOW_TO_WIN__c</fullName>
        <description>Competitor Info - How to win against</description>
        <label>Competitor Info - How to win against</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BST_COMP_STRENGHTS__c</fullName>
        <description>Competitor Strengths Details</description>
        <label>Competitor Strengths</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BST_COMP_WEEKNESSES__c</fullName>
        <description>Competitor Weeknesses Details</description>
        <label>Competitor Weaknesses</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>Field to track the country of the Account.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andorra</fullName>
                    <isActive>false</isActive>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                    <isActive>false</isActive>
                    <label>Luxembourg</label>
                </value>
                <value>
                    <fullName>Monaco</fullName>
                    <isActive>false</isActive>
                    <label>Monaco</label>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Class_Code__c</fullName>
        <description>Captures the Class code for the account</description>
        <label>Class Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_DISTRIBUTION_CHANNEL__c</fullName>
        <description>Distribution channel for Wholesalers</description>
        <inlineHelpText>Distribution channel for Wholesalers</inlineHelpText>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_External_Id__c</fullName>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_FORCE__c</fullName>
        <description>BST - field to capture competitor field force</description>
        <label>Field Force</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_Anesthesia_CC__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>Anesthesia/CriticalCare</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_Biosurgery__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>Biosurgery</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_FLUID_SYSTEMS__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>Fluid Systems</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_KAM_OverallBax__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>KAM/Overall Baxter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_NutritionAdult__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>Nutrition (Adults)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_NutritionPed__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>Nutrition (Ped/Neo)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_RenalAcute__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>Renal Acute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_RenalHD__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>Renal HD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MKTG_SGMNT_RenalPD__c</fullName>
        <description>BST - free text field to capture the segmentation of accounts per franchise</description>
        <inlineHelpText>BST - free text field to capture the segmentation of accounts per franchise</inlineHelpText>
        <label>Renal PD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_PARENT_ACCOUNT_NAME__c</fullName>
        <description>Parent&apos;s Account Name</description>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_PROFILING_REQUIRED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BST - Checks if the Profiling needs to be done for the Account Record</description>
        <inlineHelpText>BST - Checks if the Profiling needs to be done for the Account Record</inlineHelpText>
        <label>Profiling Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_PRT_ACC_IMS__c</fullName>
        <description>Internal Field for Audit purpose. Field Created to Capture IMS ID of Parent Account</description>
        <formula>Parent.DP_ID__c</formula>
        <label>Parent Account IMS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_PRT_ACC__c</fullName>
        <description>Internal field for Audit purpose. Captures the name of the Parent Account.</description>
        <formula>Parent.Name</formula>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_STATUS__c</fullName>
        <description>For Marking the record with different status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baxter Pending Review</fullName>
                </value>
                <value>
                    <fullName>Baxter Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>IMS Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Partially Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Pending Review</fullName>
                </value>
                <value>
                    <fullName>IMS Rejected</fullName>
                </value>
                <value>
                    <fullName>IMS Updated</fullName>
                    <isActive>false</isActive>
                    <label>IMS Updated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_TOP_LVL_PARENT_ACCNT__c</fullName>
        <description>BST - this field retrieves the highest/upper parent of an account. This formula goes maximum 7 levels up. This should be enough for Western Europe IMS account structure</description>
        <formula>if( CONTAINS( ParentId , &quot;0&quot;), 
if( contains( Parent.ParentId , &quot;0&quot;), 
if( contains(Parent.Parent.ParentId , &quot;0&quot;), 
if( contains(Parent.Parent.Parent.ParentId , &quot;0&quot;), 
if( contains(Parent.Parent.Parent.Parent.ParentId , &quot;0&quot;), 
if( contains(Parent.Parent.Parent.Parent.Parent.ParentId , &quot;0&quot;), 
if( contains(Parent.Parent.Parent.Parent.Parent.Parent.ParentId , &quot;0&quot;), 
Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,
Parent.Parent.Parent.Parent.Parent.Parent.Name),
Parent.Parent.Parent.Parent.Parent.Name),
Parent.Parent.Parent.Parent.Name),
Parent.Parent.Parent.Name),
Parent.Parent.Name), 
Parent.Name) , 
&quot;No Parent&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>BST - this field retrieves the highest/upper parent of an account. This formula goes maximum 7 levels up. This should be enough for Western Europe IMS account structure</inlineHelpText>
        <label>Top Level Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_ADDRESS_ID__c</fullName>
        <description>IMS COMMON - This is the unique identifier for the primary Address record, which is tied to this Workplace</description>
        <inlineHelpText>IMS COMMON - This is the unique identifier for the primary Address record, which is tied to this Workplace</inlineHelpText>
        <label>IMS Wkp. Address Id</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_EXTERNAL_ID_1__c</fullName>
        <description>Belgium: BCE</description>
        <externalId>true</externalId>
        <inlineHelpText>Belgium: BCE</inlineHelpText>
        <label>IMS Wkp. External Id1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_EXTERNAL_ID_2__c</fullName>
        <description>France: CIP Hospital</description>
        <externalId>true</externalId>
        <inlineHelpText>France: CIP Hospital</inlineHelpText>
        <label>IMS Wkp. External Id2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_EXTERNAL_ID_3__c</fullName>
        <description>France: CIP Pharmacie</description>
        <externalId>true</externalId>
        <inlineHelpText>France: CIP Pharmacie</inlineHelpText>
        <label>IMS Wkp. External Id3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_FR_WKP_ACT_STRUCTURE__c</fullName>
        <description>IMS FRANCE - Indicates the activity of the workplace: medical services, support services, technical services, etc..</description>
        <inlineHelpText>IMS FRANCE - Indicates the activity of the workplace: medical services, support services, technical services, etc..</inlineHelpText>
        <label>IMS Wkp. Activity of the Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_ID__c</fullName>
        <description>IMS COMMON - This is the unique identifier provided by IMS for this Workplace.</description>
        <externalId>true</externalId>
        <inlineHelpText>IMS COMMON - This is the unique identifier provided by IMS for this Workplace.</inlineHelpText>
        <label>IMS ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DP_WKP_ACT_LOCATION__c</fullName>
        <description>IMS COMMON - The most general classification of a workplace. The Activity Location has replaced the Class code (FAD) as the highest categorization of workplaces. Ex: Private Hospitals and Psychia</description>
        <inlineHelpText>IMS COMMON - The most general classification of a workplace. The Activity Location has replaced the Class code (FAD) as the highest categorization of workplaces. Ex: Private Hospitals and Psychia</inlineHelpText>
        <label>IMS Wkp. Activity Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic Institution</fullName>
                </value>
                <value>
                    <fullName>Administrative Institution</fullName>
                </value>
                <value>
                    <fullName>Clinic and Health Care Center</fullName>
                </value>
                <value>
                    <fullName>Group Practice</fullName>
                </value>
                <value>
                    <fullName>Hospital Unit</fullName>
                </value>
                <value>
                    <fullName>Insurance Institution</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Pharmacy (Wholesaler)</fullName>
                </value>
                <value>
                    <fullName>Private Address</fullName>
                </value>
                <value>
                    <fullName>Private Company</fullName>
                </value>
                <value>
                    <fullName>Public Health Center</fullName>
                </value>
                <value>
                    <fullName>Single Practice</fullName>
                </value>
                <value>
                    <fullName>Veterinary Practice/Clinic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_WKP_CATEGORY__c</fullName>
        <description>BOOS-711</description>
        <label>IMS Wkp. Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Semi-private/Semi-public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_WKP_EMAIL__c</fullName>
        <description>IMS Workplace Email</description>
        <label>IMS Wkp. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DP_WKP_OFFICIAL_NAME__c</fullName>
        <description>IMS COMMON - the official name of the location</description>
        <inlineHelpText>IMS COMMON - the official name of the location</inlineHelpText>
        <label>IMS Wkp. Official Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_WKP_SPEC_1__c</fullName>
        <description>IMS COMMON - Primary speciality of the workplace</description>
        <inlineHelpText>IMS COMMON - Primary speciality of the workplace</inlineHelpText>
        <label>IMS Wkp. Speciality 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abdominal/Digestive Surgery</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Addiction Medicine</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Administrative Direction</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Adolescent Health</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Allergology</fullName>
                </value>
                <value>
                    <fullName>Allergology Immunology</fullName>
                </value>
                <value>
                    <fullName>Allied Health Professionals</fullName>
                </value>
                <value>
                    <fullName>Anaesthesiology</fullName>
                </value>
                <value>
                    <fullName>Andrology</fullName>
                </value>
                <value>
                    <fullName>Angiology</fullName>
                </value>
                <value>
                    <fullName>Audiology</fullName>
                </value>
                <value>
                    <fullName>Bacteriology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineering</fullName>
                </value>
                <value>
                    <fullName>Biomedical Technician</fullName>
                </value>
                <value>
                    <fullName>Biophysics</fullName>
                </value>
                <value>
                    <fullName>Blood Banking</fullName>
                </value>
                <value>
                    <fullName>Burn Care</fullName>
                </value>
                <value>
                    <fullName>Cardiac Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiothoracic/Thoracic Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular/Vascular Surgery</fullName>
                </value>
                <value>
                    <fullName>Child &amp; Adolescent Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Child and Adolescent Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Child and Youth Allergology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_WKP_SPEC_2__c</fullName>
        <description>IMS COMMON - Additional speciality of the workplace</description>
        <inlineHelpText>IMS COMMON - Additional speciality of the workplace</inlineHelpText>
        <label>IMS Wkp. Speciality 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abdominal/Digestive Surgery</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Addiction Medicine</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Administrative Direction</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Allergology</fullName>
                </value>
                <value>
                    <fullName>Allergology Immunology</fullName>
                </value>
                <value>
                    <fullName>Anaesthesiology</fullName>
                </value>
                <value>
                    <fullName>Angiology</fullName>
                </value>
                <value>
                    <fullName>Audiology</fullName>
                </value>
                <value>
                    <fullName>Bacteriology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biophysics</fullName>
                </value>
                <value>
                    <fullName>Burn Care</fullName>
                </value>
                <value>
                    <fullName>Cardiac Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiothoracic/Thoracic Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular/Vascular Surgery</fullName>
                </value>
                <value>
                    <fullName>Child &amp; Adolescent Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Child Neurology</fullName>
                </value>
                <value>
                    <fullName>Child Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Child Surgery</fullName>
                </value>
                <value>
                    <fullName>Clinical Chemistry</fullName>
                </value>
                <value>
                    <fullName>Colorectal Surgery</fullName>
                </value>
                <value>
                    <fullName>Dementia (Alzheimer)</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Dentistry</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>